--- a/sp_layout_txt.css
+++ b/sp_layout_txt.css
@@ -6,8 +6,8 @@
    Case Problem 1
    
    Layout styles for Slate and Pencil Tutoring
-   Author: 
-   Date:   
+   Author: Alistair Wright    
+   Date:   April 3, 2023
    
    Filename: sp_layout.css
 
