--- a/sp_layout.css
+++ b/sp_layout.css
@@ -16,11 +16,30 @@
 /* Window and Body Styles */
 
 
+html { 
+   height: 100%;
+}
 
+body {
+   width: 95%;
+   min-width: 640px;
+   max-width: 960px;
+   margin-left: auto;
+   margin-right: auto;
+   min-height: 100%;
+}
+
+
+img {
+   display: block;
+}
 
 /* CSS Grid Styles */
 
-
+body {
+   display: grid;
+   grid-template-columns: 25% 25% 25% 25%
+}
 
 
 
