--- a/sp_layout.css
+++ b/sp_layout.css
@@ -41,14 +41,32 @@ body {
    grid-template-columns: 25% 25% 25% 25%
 }
 
+#logo {
+   width: 100%;
+   grid-column: span 3;
+}
 
+aside {
+   grid-column: span 2;
+}
 
 
 /* Horizontal Navigation List Styles */
 
+nav.horizontal , footer {
+   grid-column: span 4;
+}
+
+nav.horizontal li {
+   display: block;
+   width: 12.5%;
+   float: left;
+
+}
 
 
 /* Section Styles */
+
 
 
 
