--- a/sp_layout.css
+++ b/sp_layout.css
@@ -65,11 +65,25 @@ nav.horizontal li {
 }
 
 
+
+
 /* Section Styles */
 
+section img {
+   width: 50%;
+   margin-top: 0;
+   margin-bottom: 0;
+   margin-left: auto;
+   margin-right: auto;
+}
 
-
-
+section p {
+   width: 70%;
+   margin-top: 0;
+   margin-bottom: 0;
+   margin-left: auto;
+   margin-right: auto;
+}
 
 /* Customer Comment Styles */
 
