--- a/sp_layout.css
+++ b/sp_layout.css
@@ -87,3 +87,22 @@ section p {
 
 /* Customer Comment Styles */
 
+aside {
+   width: 75%;
+   padding-bottom: 30px;
+}
+
+aside:nth-of-type(odd) {
+   justify-self: end;
+}
+
+aside img {
+   float: left;
+   width: 20%;
+}
+
+aside p {
+   width: 75%;
+   margin-left: 5%;
+   float: left;
+}
